--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jetpacknavigation">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,14 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JetpackNavigation">
-        <activity android:name=".androidfakestoreex.view.EcommerceActivity">
+        <activity android:name=".fakeuserexersize.UsersActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".jetpacknavigation.MainActivity">
-        </activity>
+        <activity android:name=".androidfakestoreex.view.EcommerceActivity"></activity>
+        <activity android:name=".jetpacknavigation.MainActivity"></activity>
     </application>
 
 </manifest>
